# ppl-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.txt  txt.txt
benches/: ppl_bench.rs
src/: array.rs  boolean.rs  call_frame.rs  chunk.rs  compiler.rs  debug.rs  float.rs  function.rs  generic.rs  handler.rs  heap_list.rs  int.rs  io.rs  lib.rs  main.rs  native_fn.rs  nil.rs  number.rs  object.rs  operations.rs  options.rs  package.rs  parse_function.rs  parser.rs  rust_fn.rs  scanner.rs  script_fn.rs  stack.rs  string.rs  token.rs  value_trait.rs  values.rs  variable.rs  vm.rs
src/test_data/: comments.ppl
test_data/: comments.ppl  fib.lua  fib.ppl  fib.rb  string.ppl  test.ppl  while.lua  while.ppl  while.rb
