[package]
name = "ppl-lang"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="ppl_lib"
path="src/lib.rs"

[[bin]]
name="ppl"
path="src/main.rs"

[[bench]]
name = "ppl_bench"
harness = false

[profile.release]
debug=true
lto=true
codegen-units=1


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false




[dev-dependencies]
criterion = "0.3"


[dependencies]